Change method to attribute aiguebename, now shifting array to avoid doublons

--- a/imports/ui/components/reader.css
+++ b/imports/ui/components/reader.css
@@ -6,6 +6,7 @@
 	height: 100vh;
 	top: 0px;
 	left: 0px;
+	z-index: -9999;
 }
 .readerContainer{
 	transition: opacity 1s;
